--- a/_includes/team-bio.html
+++ b/_includes/team-bio.html
@@ -6,12 +6,17 @@
         <h3>{{ page.title }}</h3>
         <p class="subhead">{{ page.team-title }}</p>
         <p class="emailS">
-          <a href="mailto:{{ page.team-email }}">{{ page.team-email }}</a>
+          {% if page.team-email %}
+          <a href="mailto:{{ page.team-email }}">{{ page.team-email }}</a> |
+          {% endif %}
           {% if page.team-site %}
-          | <a href="{{ page.team-site }}">{{ page.team-site-text }}</a>
+          <a href="{{ page.team-site }}">{{ page.team-site-text }}</a> |
           {% endif %}
           {% if page.team-resume %}
           <a href="{{ page.team-resume }}"><i class="fa fa-file-text"></i></a>
+          {% endif %}
+          {% if page.team-stack-overflow %}
+          <a href="{{ page.team-stack-overflow }}"><i class="fa fa-stack-overflow"></i></a>
           {% endif %}
           {% if page.team-github %}
           <a href="{{ page.team-github }}"><i class="fa fa-github"></i></a>
